k8s_manifests/apply-cert-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: harbor-cert-installer
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: harbor-cert-installer
  template:
    metadata:
      labels:
        name: harbor-cert-installer
    spec:
      hostNetwork: true
      hostPID: true
      tolerations:
        - operator: Exists # chấp nhận mọi taint, kể cả control-plane, để chạy trên toàn bộ 6 node
      containers:
        - name: pause
          image: registry.k8s.io/pause:3.6
      volumes:
        - name: containerd-certs
          hostPath:
            path: /etc/containerd/certs.d
