k8s_manifests/fake-haproxy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fake-haproxy-502
  namespace: ingress-controller
  labels:
    app: haproxy-ingress
spec:
  containers:
  - name: busybox
    image: busybox
    command:
    - sh
    - -c
    - |
      while true; do
        echo '10.0.0.1 - - [22/Sep/2026:21:00:00] "GET /banking HTTP/1.1" 502 123'
        sleep 1
      done
