k8s_manifests/pvc-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storage-demo-pod
  namespace: banking
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: demo-storage
  volumes:
    - name: demo-storage
      persistentVolumeClaim:
        claimName: demo-pvc
