k8s_manifests/auth-service.yaml
# Giai đoạn 1: Auth Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: banking
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: harbor-registry
      containers:
        - name: auth-service
          image: harbor.cmc-cloud-hcm1.cloud/banking/auth-service:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: banking
spec:
  selector:
    app: auth-service
  ports:
    - port: 8001
      targetPort: 8001
      name: http
