k8s_manifests/haproxy_ELB_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress-loadbalancer
  namespace: ingress-controller
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: haproxy-ingress
    app.kubernetes.io/name: kubernetes-ingress
  ports:
    - name: http
      port: 80
      targetPort: 8080 # ← port thật pod ingress-controller đang bind, không phải 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443 # ← port thật pod đingress-controller ang bind, không phải 443
      protocol: TCP
